# gst-synth

./: README.md
gst-synth/: Cargo.toml
gst-synth/src/: gui.rs  keyboard.rs  main.rs  pipeline.rs  processor.rs  types.rs
gst-synth/src/gui/: key.rs  keys.rs  style.rs  visualization.rs  waveform_selection.rs
